two updates: 2020-59/RJ-2021-032, 2020-153/RJ-2021-048

--- a/_config.yml
+++ b/_config.yml
@@ -225,21 +225,21 @@ issues:
     bibauthor: |-
       Nora M. Villanueva and Marta Sestelo and Luis Meira-Machado
                 and Javier Roca-Pardiñas
-    abstract: '  Abstract In many situations it could be interesting to ascertain
-      whether groups of curves can be            performed, especially when confronted
-      with a considerable number of curves. This paper introduces            an R
-      package, known as clustcurv, for determining clusters of curves with an automatic
-      selection of            their number. The package can be used for determining
-      groups in multiple survival curves as well as            for multiple regression
-      curves. Moreover, it can be used with large numbers of curves. An illustration            of
+    abstract: ' Abstract In many situations it could be interesting to ascertain whether
+      groups of curves can be           performed, especially when confronted with
+      a considerable number of curves. This paper introduces           an R package,
+      known as clustcurv, for determining clusters of curves with an automatic selection
+      of           their number. The package can be used for determining groups in
+      multiple survival curves as well as           for multiple regression curves.
+      Moreover, it can be used with large numbers of curves. An illustration           of
       the use of clustcurv is provided, using both real data examples and artificial
-      data.            Keywords: multiple curves, number of groups, nonparametric,
-      survival analysis, regression models,            cluster'
+      data.           Keywords: multiple curves, number of groups, nonparametric,
+      survival analysis, regression models,           cluster  '
     acknowledged: '2020-05-01'
     online: '2021-06-07'
     CRANpkgs:
-    - survminer
     - clustcurv
+    - survminer
     - npregfast
     - ggplot2
     - doParallel
@@ -847,24 +847,25 @@ issues:
                 in R using Futures
     author: Henrik Bengtsson
     bibauthor: Henrik Bengtsson
-    abstract: '  Abstract A future is a programming construct designed for concurrent
-      and asynchronous evaluation            of code, making it particularly useful
-      for parallel processing. The future package implements the            Future
+    abstract: ' Abstract A future is a programming construct designed for concurrent
+      and asynchronous evaluation           of code, making it particularly useful
+      for parallel processing. The future package implements the           Future
       API for programming with futures in R. This minimal API provides sufficient
-      constructs for            implementing parallel versions of well-established,
-      high-level map-reduce APIs. The future ecosystem            supports exception
+      constructs for           implementing parallel versions of well-established,
+      high-level map-reduce APIs. The future ecosystem           supports exception
       handling, output and condition relaying, parallel random number generation,
-      and            automatic identification of globals lowering the threshold to
-      parallelize code. The Future API bridges            parallel frontends with
-      parallel backends following the philosophy that end-users are the ones who            choose
+      and           automatic identification of globals lowering the threshold to
+      parallelize code. The Future API bridges           parallel frontends with parallel
+      backends following the philosophy that end-users are the ones who           choose
       the parallel backend while the developer focuses on what to parallelize. A variety
-      of backends            exist and third-party contributions meeting the specifications,
-      which ensure that the same code works            on all backends, are automatically
-      supported. The future framework solves several problems not            addressed
-      by other parallel frameworks in R.'
+      of backends           exist and third-party contributions meeting the specifications,
+      which ensure that the same code works           on all backends, are automatically
+      supported. The future framework solves several problems not           addressed
+      by other parallel frameworks in R.  '
     acknowledged: '2020-10-30'
     online: '2021-06-08'
     CRANpkgs:
+    - sparklyr
     - future
     - foreach
     - multicore
@@ -905,6 +906,7 @@ issues:
     - future.BatchJobs
     - BatchJobs
     - purrr
+    - targets
     - drake
     - shiny
     - plumber
@@ -913,13 +915,13 @@ issues:
     CTV_rev:
     - HighPerformanceComputing
     - WebTechnologies
-    - MachineLearning
     - Databases
-    - Finance
+    - MachineLearning
     - ModelDeployment
+    - ReproducibleResearch
+    - Finance
     - Multivariate
     - Optimization
-    - ReproducibleResearch
     - Survival
     - TeachingStatistics
     - TimeSeries
