--- a/_config.yml
+++ b/_config.yml
@@ -1171,6 +1171,68 @@ issues:
     - HighPerformanceComputing
     - Robust
     landing: '2021'
+  - slug: RJ-2021-056
+    title: Managing multiple data streams in R
+    bibtitle: Managing multiple data streams in R
+    author: Mark P.J. van der Loo
+    bibauthor: Mark P.J. van der Loo
+    abstract: ' Abstract It is often useful to tap secondary information from a running
+      R script. Obvious use           cases include logging, and profiling of time
+      or memory consuption. Perhaps less obvious cases           include tracking
+      changes in R objects or collecting output of unit tests (assertions). In this
+      paper we           demonstrate an approach that abstracts collection and processing
+      of such secondary information from           the code in the running script.
+      The approach is implemented in pure R, and allows users to control the           secondary
+      information stream stream without global side effects and without altering existing
+      code.           Although some elements of the approach discussed here have been
+      applied in existing packages, the           combination of elements proposed
+      here appears thus far to have been overlooked.             Introduction            The
+      R language provides a convenient language to read, manipulate, and write data
+      in the form           of scripts. As with any other scripted language, an R
+      script gives description of data manipulation           activities, one after
+      the other when read from top to bottom. The main advantage of a scripting           approach
+      is that it makes each aspect of the data stream completely visible and explicit.
+      This point           of strength also reflects as a weakness, namely every operation
+      must necessarily be visible and           explicit. Some details can be hidden
+      through regular means of abstraction including functions or           object-oriented
+      data structures. But there are cases where functions or object types are not
+      adequate           for hiding implementation details.               When we
+      need to derive information about a running data processing script, creating
+      a new           object type or function will not do because deriving that information
+      implies we need to somehow           hamper with the process as it runs. As
+      an example, consider a code fragment where the variable x is           manipulated.             x[x
+      > threshold] <threshold             x[is.na(dat$x)] <median(x, na.rm=TRUE)           In
+      the first statement every value above a certain threshold is replaced with the
+      threshold, and next,           missing values are replaced with the median of
+      the completed cases. It is interesting to know how an           aggregate of
+      interest, say the mean of x, evolves as it gets processed. The instinctive way
+      to do this is           to add statements to the script to collect the desired
+      information as a function of process step.             meanx <mean(x, na.rm=TRUE)             x[x
+      > threshold] <threshold             meanx <c(meanx, mean(x, na.rm=TRUE))             x[is.na(dat$x)]
+      <median(x, na.rm=TRUE)             meanx <c(meanx, mean(x, na.rm=TRUE))           Obviously,
+      this solution distracts from the main purpose of the script. It is also a repetitive
+      task, which           validates some form of abstraction.               A more
+      general picture of what we would like to achieve is given in Figure 1. The ‘primary
+      data           stream’ is developed by a user as a script. In the previous example
+      this is the processing of variable x.           When the script runs, some kind
+      of logging information, which we label the ‘secondary data stream’ is           derived
+      implicitly by an abstraction layer.               Creating an abstraction layer
+      means that concerns between primary and secondary data streams           are
+      separated as much as possible. In particular, we want to avoid inspecting or
+      altering the user’s           code. Furthermore, we would like the user to have
+      some control over the secondary stream from           within the script, for
+      example to start, stop or parameterize the secondary stream. This should all           be
+      done without any side effects. This means that the neither the user, nor the
+      secondary stream           should have to manipulate or read global variables,
+      options, or other environmental settings to convey           information from
+      one stream to the other. Finally, we want to treat the availability of a secondary
+      data           stream as a normal condition. This means we wish to avoid using
+      signaling conditions (e.g. warnings           or errors) to convey information
+      between the streams, unless there is an actual exceptional condition           such
+      as an error.  '
+    acknowledged: '2019-10-20'
+    online: '2021-06-21'
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
