--- a/_config.yml
+++ b/_config.yml
@@ -1233,6 +1233,72 @@ issues:
     acknowledged: '2019-10-20'
     online: '2021-06-21'
     landing: '2021'
+  - slug: RJ-2021-057
+    title: 'garchx: Flexible and Robust GARCH-X Modelling'
+    bibtitle: 'garchx: Flexible and Robust GARCH-X Modelling'
+    author:
+    - omission enable parsimonious specifications
+    - functions to facilitate the non-standard inference           when the standardised
+      innovations are non-normal or dependent
+    - or both. Zero-coefficient restrictions           Maximum Likelihood (QML) methods
+      ensure estimates are consistent
+    - standard errors valid
+    - even           order
+    - r is the asymmetry or leverage order
+    - ’X’ indicates that covariates can be included. Quasi           estimation
+    - inference of GARCH(p
+    - q
+    - r)-X models
+    - where p is the ARCH order
+    - q is the GARCH           Abstract The garchx package provides a user-friendly
+    - fast
+    - flexible
+    - robust framework for the
+    bibauthor: |-
+      omission enable parsimonious specifications and functions
+                to facilitate the non-standard inference when
+                the standardised innovations are non-normal
+                or dependent and or both. Zero-coefficient
+                restrictions Maximum Likelihood (QML) methods
+                ensure estimates are consistent and standard
+                errors valid and even order and r is the
+                asymmetry or leverage order and ’X’ indicates
+                that covariates can be included. Quasi estimation
+                and inference of GARCH(p and q and r)-X models
+                and where p is the ARCH order and q is the
+                GARCH Abstract The garchx package provides a
+                user-friendly and fast and flexible and robust
+                framework for the
+    abstract: ' Abstract The garchx package provides a user-friendly, fast, flexible
+      and robust framework for the           estimation and inference of GARCH(p,
+      q, r)-X models, where p is the ARCH order, q is the GARCH           order, r
+      is the asymmetry or leverage order, and ’X’ indicates that covariates can be
+      included. Quasi           Maximum Likelihood (QML) methods ensure estimates
+      are consistent and standard errors valid, even           when the standardised
+      innovations are non-normal or dependent, or both. Zero-coefficient restrictions           by
+      omission enable parsimonious specifications, and functions to facilitate the
+      non-standard inference           associated with zero-restrictions in the null-hypothesis
+      are provided. Finally, in formal comparisons of           precision and speed,
+      the garchx package performs well relative to other prominent GARCH-packages           on
+      CRAN.  '
+    acknowledged: '2020-06-03'
+    online: '2021-06-21'
+    CRANpkgs:
+    - tseries
+    - fGarch
+    - rugarch
+    - garch
+    - xts
+    - zoo
+    - microbenchmark
+    CTV_rev:
+    - Finance
+    - TimeSeries
+    - Econometrics
+    - Environmetrics
+    - MissingData
+    - SpatioTemporal
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
