--- a/_config.yml
+++ b/_config.yml
@@ -1299,6 +1299,60 @@ issues:
     - MissingData
     - SpatioTemporal
     landing: '2021'
+  - slug: RJ-2021-059
+    title: The HBV.IANIGLA Hydrological Model
+    bibtitle: The HBV.IANIGLA Hydrological Model
+    author:
+    - Ezequiel Toum
+    - Mariano H. Masiokas
+    - Ricardo Villalba
+    - Pierre Pitte
+    - Lucas Ruiz
+    bibauthor: |-
+      Ezequiel Toum and Mariano H. Masiokas and Ricardo Villalba
+                and Pierre Pitte and Lucas Ruiz
+    abstract: ' Abstract Over the past 40 years, the HBV (Hydrologiska Byråns Vattenbalansavdelning)
+      hydrological           model has been one of the most used worldwide due to
+      its robustness, simplicity and reliable results.           Despite these advantages,
+      the available versions impose some limitations for research studies in           mountain
+      watersheds dominated by ice-snow melt runoff (i.e.: no glacier module, a limited
+      number of           elevation bands, among other constraints). Here we present
+      HBV.IANIGLA, a tool for hydroclimatic           studies in regions with steep
+      topography and/or cryospheric processes which provides a modular           and
+      extended implementation of the HBV model as an R package. To our knowledge,
+      this is the first           modular version of the original HBV model. This
+      feature can be very useful for teaching hydrological           modeling, as
+      it offers the possibility to build a customized, open-source model that can
+      be adjusted to           different requirements of students and users.  '
+    acknowledged: '2020-10-27'
+    online: '2021-06-21'
+    CRANpkgs:
+    - TUWmodel
+    - topmodel
+    - dynatopmodel
+    - airGR
+    - glacierSMBM
+    - HBV.IANIGLA
+    - Evapotranspiration
+    - Rcpp
+    - microbechmark
+    - DEoptim
+    - tidyverse
+    - sp
+    - raster
+    - hydroGOF
+    - plotly
+    - hydroToolkit
+    CTV_rev:
+    - Hydrology
+    - Environmetrics
+    - Spatial
+    - SpatioTemporal
+    - HighPerformanceComputing
+    - NumericalMathematics
+    - Optimization
+    - WebTechnologies
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
