--- a/_config.yml
+++ b/_config.yml
@@ -1353,6 +1353,44 @@ issues:
     - Optimization
     - WebTechnologies
     landing: '2021'
+  - slug: RJ-2021-060
+    title: 'gofCopula: Goodness-of-Fit Tests for Copulae'
+    bibtitle: 'gofCopula: Goodness-of-Fit Tests for Copulae'
+    author:
+    - Ostap Okhrin
+    - Simon Trimborn
+    - Martin Waltz
+    bibauthor: Ostap Okhrin and Simon Trimborn and Martin Waltz
+    abstract: ' Abstract Last decades show an increased interest in modeling various
+      types of data through copulae.           Different copula models have been developed,
+      which lead to the challenge of finding the best fitting           model for
+      a particular dataset. From the other side, a strand of literature developed
+      a list of different           Goodness-of-Fit (GoF) tests with different powers
+      under different conditions. Usual practice is the           selection of the
+      best copula via the p-value of the GoF test. Although this method is not purely
+      correct           due to the fact that non-rejection does not imply acception,
+      this strategy is favoured by practitioners.           Unfortunately, different
+      GoF tests often provide contradicting outputs. The proposed R-package           brings
+      under one umbrella 13 most used copulae plus their rotated variants together
+      with 16 GoF           tests and a hybrid one. The package offers flexible margin
+      modeling, automatized parallelization,           parameter estimation as well
+      as a user friendly interface and pleasant visualizations of the results. To           illustrate
+      the functionality of the package, two exemplary applications are provided.  '
+    acknowledged: '2020-10-30'
+    online: '2021-06-21'
+    CRANpkgs:
+    - copula
+    - TwoCop
+    - VineCopula
+    - gofCopula
+    - progress
+    - yarrr
+    CTV_rev:
+    - Distributions
+    - ExtremeValue
+    - Finance
+    - Multivariate
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
