--- a/_config.yml
+++ b/_config.yml
@@ -1391,6 +1391,48 @@ issues:
     - Finance
     - Multivariate
     landing: '2021'
+  - slug: RJ-2021-061
+    title: 'penPHcure: Variable Selection in Proportional Hazards Cure Model with
+      Time-Varying Covariates'
+    bibtitle: |-
+      penPHcure: Variable Selection in Proportional Hazards Cure
+                Model with Time-Varying Covariates
+    author:
+    - Alessandro Beretta
+    - Cédric Heuchenne
+    bibauthor: Alessandro Beretta and Cédric Heuchenne
+    abstract: ' Abstract We describe the penPHcure R package, which implements the
+      semi-parametric proportional          hazards (PH) cure model of Sy and Taylor
+      (2000) extended to time-varying covariates and the variable           selection
+      technique based on its SCAD-penalized likelihood proposed by Beretta and Heuchenne           (2019a).
+      In survival analysis, cure models are a useful tool when a fraction of the population
+      is likely to           be immune from the event of interest. They can separate
+      the effects of certain factors on the probability           to be susceptible
+      and on the time until the occurrence of the event. Moreover, the penPHcure package           allows
+      the user to simulate data from a PH cure model, where the event-times are generated
+      on a           continuous scale from a piecewise exponential distribution conditional
+      on time-varying covariates,           with a method similar to Hendry (2014).
+      We present the results of a simulation study to assess the           finite
+      sample performance of the methodology and we illustrate the functionalities
+      of the penPHcure           package using criminal recidivism data.  '
+    acknowledged: []
+    online: '2021-06-21'
+    CRANpkgs:
+    - penPHcure
+    - flexsurvcure
+    - flexsurv
+    - nltm
+    - smcure
+    - spduration
+    - survival
+    - RcmdrPlugin.survival
+    CTV_rev:
+    - Survival
+    - ClinicalTrials
+    - Distributions
+    - Econometrics
+    - SocialSciences
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
