--- a/_config.yml
+++ b/_config.yml
@@ -1433,6 +1433,47 @@ issues:
     - Econometrics
     - SocialSciences
     landing: '2021'
+  - slug: RJ-2021-062
+    title: Unidimensional and Multidimensional Methods for Recurrence Quantification
+      Analysis with crqa
+    bibtitle: |-
+      Unidimensional and Multidimensional Methods for Recurrence
+                Quantification Analysis with crqa
+    author:
+    - Moreno I. Coco
+    - Dan Mønster
+    - Giuseppe Leonardi
+    - Rick Dale
+    - Sebastian Wallot
+    bibauthor: |-
+      Moreno I. Coco and Dan Mønster and Giuseppe Leonardi and
+                Rick Dale and Sebastian Wallot
+    abstract: ' Abstract Recurrence quantification analysis is a widely used method
+      for characterizing patterns in time           series. This article presents
+      a comprehensive survey for conducting a wide range of recurrence-based           analyses
+      to quantify the dynamical structure of single and multivariate time series,
+      and to capture           coupling properties underlying leader-follower relationships.
+      The basics of recurrence quantification           analysis (RQA) and all its
+      variants are formally introduced step-by-step from the simplest auto          recurrence
+      to the most advanced multivariate case. Importantly, we show how such RQA methods           can
+      be deployed under a single computational framework in R using a substantially
+      renewed version           our crqa 2.0 package. This package includes implementations
+      of several recent advances in recurrence          based analysis, among them
+      applications to multivariate data, and improved entropy calculations           for
+      categorical data. We show concrete applications of our package to example data,
+      together with a           detailed description of its functions and some guidelines
+      on their usage.  '
+    acknowledged: '2020-04-30'
+    online: '2021-06-21'
+    CRANpkgs:
+    - tseriesChaos
+    - nonlinearTseries
+    - RHRV
+    - crqa
+    CTV_rev:
+    - TimeSeries
+    - Finance
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
