--- a/_config.yml
+++ b/_config.yml
@@ -1474,6 +1474,58 @@ issues:
     - TimeSeries
     - Finance
     landing: '2021'
+  - slug: RJ-2021-063
+    title: 'stratamatch: Prognostic Score Stratification using a Pilot Design'
+    bibtitle: |-
+      stratamatch: Prognostic Score Stratification using a Pilot
+                Design
+    author:
+    - Rachael C. Aikens
+    - Joseph Rigdon
+    - Justin Lee
+    - Michael Baiocchi
+    - Andrew B. Goldstone
+    - Peter Chiu
+    - '          Y. Joseph Woo'
+    - Jonathan H. Chen
+    bibauthor: |-
+      Rachael C. Aikens and Joseph Rigdon and Justin Lee and
+                Michael Baiocchi and Andrew B. Goldstone and Peter
+                Chiu and Y. Joseph Woo and Jonathan H. Chen
+    abstract: ' Abstract Optimal propensity score matching has emerged as one of the
+      most ubiquitous approaches           for causal inference studies on observational
+      data; However, outstanding critiques of the statistical           properties
+      of propensity score matching have cast doubt on the statistical efficiency of
+      this technique,           and the poor scalability of optimal matching to large
+      data sets makes this approach inconvenient           if not infeasible for sample
+      sizes that are increasingly commonplace in modern observational data.           The
+      stratamatch package provides implementation support and diagnostics for ‘stratified
+      matching           designs,’ an approach which addresses both of these issues
+      with optimal propensity score matching for           large-sample observational
+      studies. First, stratifying the data enables more computationally efficient           matching
+      of large data sets. Second, stratamatch implements a ‘pilot design’ approach
+      in order to           stratify by a prognostic score, which may increase the
+      precision of the effect estimate and increase           power in sensitivity
+      analyses of unmeasured confounding.  '
+    acknowledged: '2021-03-01'
+    online: '2021-06-21'
+    CRANpkgs:
+    - stratamatch
+    - MatchIt
+    - optmatch
+    - DOS2
+    - nearfar
+    - sensitivitymw
+    - sensitivityfull
+    - glmnet
+    CTV_rev:
+    - SocialSciences
+    - MachineLearning
+    - OfficialStatistics
+    - Optimization
+    - Survival
+    suppl: 1.8 Kb
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
