--- a/_config.yml
+++ b/_config.yml
@@ -1236,39 +1236,8 @@ issues:
   - slug: RJ-2021-057
     title: 'garchx: Flexible and Robust GARCH-X Modelling'
     bibtitle: 'garchx: Flexible and Robust GARCH-X Modelling'
-    author:
-    - omission enable parsimonious specifications
-    - functions to facilitate the non-standard inference           when the standardised
-      innovations are non-normal or dependent
-    - or both. Zero-coefficient restrictions           Maximum Likelihood (QML) methods
-      ensure estimates are consistent
-    - standard errors valid
-    - even           order
-    - r is the asymmetry or leverage order
-    - ’X’ indicates that covariates can be included. Quasi           estimation
-    - inference of GARCH(p
-    - q
-    - r)-X models
-    - where p is the ARCH order
-    - q is the GARCH           Abstract The garchx package provides a user-friendly
-    - fast
-    - flexible
-    - robust framework for the
-    bibauthor: |-
-      omission enable parsimonious specifications and functions
-                to facilitate the non-standard inference when
-                the standardised innovations are non-normal
-                or dependent and or both. Zero-coefficient
-                restrictions Maximum Likelihood (QML) methods
-                ensure estimates are consistent and standard
-                errors valid and even order and r is the
-                asymmetry or leverage order and ’X’ indicates
-                that covariates can be included. Quasi estimation
-                and inference of GARCH(p and q and r)-X models
-                and where p is the ARCH order and q is the
-                GARCH Abstract The garchx package provides a
-                user-friendly and fast and flexible and robust
-                framework for the
+    author: Genaro Sucarrat
+    bibauthor: Genaro Sucarrat
     abstract: ' Abstract The garchx package provides a user-friendly, fast, flexible
       and robust framework for the           estimation and inference of GARCH(p,
       q, r)-X models, where p is the ARCH order, q is the GARCH           order, r
@@ -1282,7 +1251,7 @@ issues:
       the garchx package performs well relative to other prominent GARCH-packages           on
       CRAN.  '
     acknowledged: '2020-06-03'
-    online: '2021-06-21'
+    online: '2021-06-22'
     CRANpkgs:
     - tseries
     - fGarch
