--- a/_config.yml
+++ b/_config.yml
@@ -1069,19 +1069,19 @@ issues:
     - Karissa Whiting
     - Michael Curry
     bibauthor: Daniel D. Sjoberg and Karissa Whiting and Michael Curry
-    abstract: '  Abstract The gtsummary package provides an elegant and flexible way
-      to create publication-ready            summary tables in R. A critical part
-      of the work of statisticians, data scientists, and analysts is            summarizing
+    abstract: ' Abstract The gtsummary package provides an elegant and flexible way
+      to create publication-ready           summary tables in R. A critical part of
+      the work of statisticians, data scientists, and analysts is           summarizing
       data sets and regression models in R and publishing or sharing polished summary
-      tables.            The gtsummary package was created to streamline these everyday
-      analysis tasks by allowing users to            easily create reproducible summaries
-      of data sets, regression models, survey data, and survival data            with
+      tables.           The gtsummary package was created to streamline these everyday
+      analysis tasks by allowing users to           easily create reproducible summaries
+      of data sets, regression models, survey data, and survival data           with
       a simple interface and very little code. The package follows a tidy framework,
-      making it easy to            integrate in standard data workflows, and offers
-      many table customization features through function            arguments, helper
-      functions, and custom themes.'
+      making it easy to           integrate in standard data workflows, and offers
+      many table customization features through function           arguments, helper
+      functions, and custom themes.  '
     acknowledged: '2021-01-15'
-    online: '2021-06-08'
+    online: '2021-06-22'
     CRANpkgs:
     - gtsummary
     - broom
