title for mark van der loos paper

--- a/_config.yml
+++ b/_config.yml
@@ -1172,8 +1172,8 @@ issues:
     - Robust
     landing: '2021'
   - slug: RJ-2021-056
-    title: Managing multiple data streams in R
-    bibtitle: Managing multiple data streams in R
+    title: A Method for Deriving Information from Running R Code
+    bibtitle: A Method for Deriving Information from Running R Code
     author: Mark P.J. van der Loo
     bibauthor: Mark P.J. van der Loo
     abstract: ' Abstract It is often useful to tap secondary information from a running
