--- a/_config.yml
+++ b/_config.yml
@@ -1495,6 +1495,38 @@ issues:
     - Survival
     suppl: 1.8 Kb
     landing: '2021'
+  - slug: RJ-2021-064
+    title: G2F as a Novel Tool to Find and Fill Gaps in Metabolic Networks
+    bibtitle: |-
+      G2F as a Novel Tool to Find and Fill Gaps in Metabolic
+                Networks
+    author:
+    - Daniel Osorio
+    - Andrés Pinzón Velasco
+    - Nicolás Mendoza-Mejía
+    - Felipe Rojas-Rodríguez
+    - '          Janneth González'
+    bibauthor: |-
+      Daniel Osorio and Andrés Pinzón Velasco and Nicolás Mendoza-
+                Mejía and Felipe Rojas-Rodríguez and Janneth
+                González
+    abstract: ' Abstract During the building of a genome-scale metabolic model, there
+      are several dead-end metabo          lites and substrates which cannot be imported,
+      produced nor used by any reaction incorporated in           the network. The
+      presence of these dead-end metabolites can block out the net flux of the objective           function
+      when it is evaluated through Flux Balance Analysis (FBA), and when it is not
+      blocked, bias           in the biological conclusions increase. In this aspect,
+      the refinement to restore the connectivity of           the network can be carried
+      out manually or using computational algorithms. The g2f package was           designed
+      as a tool to find the gaps from dead-end metabolites and fill them from the
+      stoichiometric           reactions of a reference, filtering candidate reactions
+      using a weighting function. Additionally, this           algorithm allows to
+      download all the set of gene-associated stoichiometric reactions for a specific           organism
+      from the KEGG database. Our package is compatible with both 4.0.0 and 3.6.0
+      R versions.  '
+    acknowledged: '2019-10-20'
+    online: '2021-07-15'
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
