--- a/_config.yml
+++ b/_config.yml
@@ -1527,6 +1527,52 @@ issues:
     acknowledged: '2019-10-20'
     online: '2021-07-15'
     landing: '2021'
+  - slug: RJ-2021-065
+    title: 'The bdpar Package: Big Data Pipelining Architecture for R'
+    bibtitle: 'The bdpar Package: Big Data Pipelining Architecture for R'
+    author:
+    - Miguel Ferreiro-Díaz
+    - Tomás R. Cotos-Yáñez
+    - David Ruano-Ordás
+    bibauthor: |-
+      Miguel Ferreiro-Díaz and Tomás R. Cotos-Yáñez and David
+                Ruano-Ordás
+    abstract: ' Abstract In the last years, big data has become a useful paradigm
+      for taking advantage of multiple           sources to find relevant knowledge
+      in real domains (such as the design of personalized marketing           campaigns
+      or helping to palliate the effects of several mortal diseases). Big data programming
+      tools           and methods have evolved over time from a MapReduce to a pipeline-based
+      archetype. Concretely           the use of pipelining schemes has become the
+      most reliable way of processing and analysing large           amounts of data.
+      To this end, this work introduces bdpar, a new highly customizable pipeline-based           framework
+      (using the OOP paradigm provided by R6 package) able to execute multiple pre-processing           tasks
+      over heterogeneous data sources. Moreover, to increase the flexibility and performance,
+      bdpar           provides helpful features such as (i) the definition of a novel
+      object-based pipe operator (%>|%), (ii)           the ability to easily design
+      and deploy new (and customized) input data parsers, tasks and pipelines,           (iii)
+      only-once execution which avoids the execution of previously processed information
+      (instances)           guaranteeing that only new both input data and pipelines
+      are executed, (iv) the capability to perform           serial or parallel operations
+      according to the user needs, (v) the inclusion of a debugging mechanism           which
+      allows users to check the status of each instance (and find possible errors)
+      throughout the           process.  '
+    acknowledged: '2020-04-30'
+    online: '2021-07-15'
+    CRANpkgs:
+    - bdpar
+    - R6
+    - repo
+    - drake
+    - magrittr
+    - rtweet
+    - tuber
+    - tm
+    CTV_rev:
+    - HighPerformanceComputing
+    - ReproducibleResearch
+    - WebTechnologies
+    - NaturalLanguageProcessing
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
