--- a/_config.yml
+++ b/_config.yml
@@ -1573,6 +1573,69 @@ issues:
     - WebTechnologies
     - NaturalLanguageProcessing
     landing: '2021'
+  - slug: RJ-2021-066
+    title: 'ROCnReg: An R Package for Receiver Operating Characteristic Curve Inference
+      with and without Covariates'
+    bibtitle: |-
+      ROCnReg: An R Package for Receiver Operating Characteristic
+                Curve Inference with and without Covariates
+    author:
+    - María Xosé Rodríguez-Álvarez
+    - Vanda Inácio
+    bibauthor: María Xosé Rodríguez-Álvarez and Vanda Inácio
+    abstract: ' Abstract This paper introduces the package ROCnReg that allows estimating
+      the pooled ROC           curve, the covariate-specific ROC curve, and the covariate-adjusted
+      ROC curve by different methods,           both from (semi) parametric and nonparametric
+      perspectives and within Bayesian and frequentist           paradigms. From the
+      estimated ROC curve (pooled, covariate-specific, or covariate-adjusted), several           summary
+      measures of discriminatory accuracy, such as the (partial) area under the ROC
+      curve and the           Youden index, can be obtained. The package also provides
+      functions to obtain ROC-based optimal           threshold values using several
+      criteria, namely, the Youden index criterion and the criterion that sets a           target
+      value for the false positive fraction. For the Bayesian methods, we provide
+      tools for assessing           model fit via posterior predictive checks, while
+      model choice can be carried out via several information           criteria.
+      Numerical and graphical outputs are provided for all methods. This is the only
+      package           implementing Bayesian procedures for ROC curves.  '
+    acknowledged: '2020-10-30'
+    online: '2021-07-15'
+    CRANpkgs:
+    - sROC
+    - pROC
+    - nsROC
+    - npROCRegression
+    - OptimalCutpoints
+    - ThresholdROC
+    - ROCnReg
+    - ggplot2
+    - coda
+    - moments
+    - nor1mix
+    - Matrix
+    - spatstat
+    - np
+    - lattice
+    - MASS
+    - pbivnorm
+    CTV_rev:
+    - Distributions
+    - Econometrics
+    - Multivariate
+    - Graphics
+    - NumericalMathematics
+    - SocialSciences
+    - TeachingStatistics
+    - Bayesian
+    - Cluster
+    - Environmetrics
+    - gR
+    - Phylogenetics
+    - Psychometrics
+    - Robust
+    - Spatial
+    - SpatioTemporal
+    - Survival
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
