--- a/_config.yml
+++ b/_config.yml
@@ -1636,6 +1636,35 @@ issues:
     - SpatioTemporal
     - Survival
     landing: '2021'
+  - slug: RJ-2021-067
+    title: A New Versatile Discrete Distribution
+    bibtitle: A New Versatile Discrete Distribution
+    author: Rolf Turner
+    bibauthor: Rolf Turner
+    abstract: ' Abstract This paper introduces a new flexible distribution for discrete
+      data. Approximate moment           estimators of the parameters of the distribution,
+      for use as starting values for a numerical maximum           likelihood procedure,
+      are discussed. The quality of the maximum likelihood estimates is assessed           via
+      simulation experiments. Several examples are given of fitting instances of the
+      new distribution to           real and simulated data. It is noted that the
+      new distribution is a member of the exponential family.           Expressions
+      for the gradient and hessian of the log likelihood of the new distribution are
+      derived.           The former facilitates the numerical maximisation of the
+      likelihood with optim(); the latter provides           means of calculating
+      or estimating the covariance matrix of of the parameter estimates. A discrepancy           between
+      estimates of the covariance matrix obtained by inverting the hessian and those
+      obtained by           Monte Carlo methods is discussed.  '
+    acknowledged: '2021-01-15'
+    online: '2021-07-15'
+    CRANpkgs:
+    - hmm.discnp
+    - rmutil
+    - dbd
+    - ellipse
+    CTV_rev:
+    - Distributions
+    - Multivariate
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
