--- a/_config.yml
+++ b/_config.yml
@@ -1665,6 +1665,68 @@ issues:
     - Distributions
     - Multivariate
     landing: '2021'
+  - slug: RJ-2021-068
+    title: 'BayesSPsurv: An R Package to Estimate Bayesian (Spatial) Split-Population
+      Survival Models'
+    bibtitle: |-
+      BayesSPsurv: An R Package to Estimate Bayesian (Spatial)
+                Split-Population Survival Models
+    author:
+    - Brandon Bolte
+    - Nicolás Schmidt
+    - Sergio Béjar
+    - Nguyen Huynh
+    - Bumba Mukherjee
+    bibauthor: |-
+      Brandon Bolte and Nicolás Schmidt and Sergio Béjar and
+                Nguyen Huynh and Bumba Mukherjee
+    abstract: ' Abstract Survival data often include a fraction of units that are
+      susceptible to an event of interest           as well as a fraction of “immune”
+      units. In many applications, spatial clustering in unobserved risk           factors
+      across nearby units can also affect their survival rates and odds of becoming
+      immune. To           address these methodological challenges, this article introduces
+      our BayesSPsurv R-package, which           fits parametric Bayesian Spatial
+      split-population survival (cure) models that can account for spatial           autocorrelation
+      in both subpopulations of the user’s time-to-event data. Spatial autocorrelation
+      is           modeled with spatially weighted frailties, which are estimated
+      using a conditionally autoregressive           prior. The user can also fit
+      parametric cure models with or without non-spatial i.i.d. frailties, and           each
+      model can incorporate time-varying covariates. BayesSPsurv also includes various
+      functions to           conduct pre-estimation spatial autocorrelation tests,
+      visualize results, and assess model performance,           all of which are
+      illustrated using data on post-civil war peace survival.  '
+    acknowledged: '2021-02-01'
+    online: '2021-07-15'
+    CRANpkgs:
+    - BayesSPsurv
+    - survival
+    - dynsurv
+    - smcure
+    - nltm
+    - flexsurvcure
+    - spduration
+    - BayesX
+    - R2BayesX
+    - spBayesSurv
+    - spatsurv
+    - Rcpp
+    - coda
+    - doParallel
+    - doRNG
+    - countrycode
+    - rworldmap
+    CTV_rev:
+    - Survival
+    - Bayesian
+    - HighPerformanceComputing
+    - Spatial
+    - ClinicalTrials
+    - Econometrics
+    - gR
+    - NumericalMathematics
+    - OfficialStatistics
+    - SocialSciences
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
