--- a/_config.yml
+++ b/_config.yml
@@ -1533,10 +1533,11 @@ issues:
     author:
     - Miguel Ferreiro-Díaz
     - Tomás R. Cotos-Yáñez
+    - José R. Méndez
     - David Ruano-Ordás
     bibauthor: |-
-      Miguel Ferreiro-Díaz and Tomás R. Cotos-Yáñez and David
-                Ruano-Ordás
+      Miguel Ferreiro-Díaz and Tomás R. Cotos-Yáñez and José R.
+                Méndez and David Ruano-Ordás
     abstract: ' Abstract In the last years, big data has become a useful paradigm
       for taking advantage of multiple           sources to find relevant knowledge
       in real domains (such as the design of personalized marketing           campaigns
@@ -1557,9 +1558,8 @@ issues:
       allows users to check the status of each instance (and find possible errors)
       throughout the           process.  '
     acknowledged: '2020-04-30'
-    online: '2021-07-15'
+    online: '2021-07-16'
     CRANpkgs:
-    - bdpar
     - R6
     - repo
     - drake
