fixed the author names in accepted paper list

--- a/_config.yml
+++ b/_config.yml
@@ -557,13 +557,13 @@ issues:
     author:
     - Valeria Policastro
     - Dario Righelli
-    - 'Annamaria Carissimo∗ # '
-    - 'Luisa Cutillo∗ #'
-    - 'Italia De Feis∗ #'
+    - Annamaria Carissimo
+    - Luisa Cutillo
+    - Italia De Feis
     bibauthor: |-
       Valeria Policastro and Dario Righelli and Annamaria
-                Carissimo∗ # and Luisa Cutillo∗ # and Italia De
-                Feis∗ #
+                Carissimo and Luisa Cutillo and Italia De
+                Feis
     abstract: '  Abstract In network analysis, many community detection algorithms
       have been developed, however,            their implementation leaves unaddressed
       the question of the statistical validation of the results. Here            we
@@ -699,7 +699,7 @@ issues:
     - Alexandre Brouste
     - Christophe Dutang & Darel Noutsa Mieniedou
     bibauthor: |-
-      Alexandre Brouste and Christophe Dutang & Darel Noutsa
+      Alexandre Brouste and Christophe Dutang and Darel Noutsa
                 Mieniedou
     abstract: '  Abstract The OneStep package proposes principally an eponymic function
       that numerically computes            Le Cam’s one-step estimator which is asymptotically
@@ -932,11 +932,9 @@ issues:
       Analysing Dependence Between Point Processes in Time Using
                 IndTestPP
     author:
-    - Cebrián
-    - A.C.
-    - Asín
-    - J.
-    bibauthor: Cebrián and A.C. and Asín and J.
+    - A.C. Cebrián
+    - J. Asín
+    bibauthor: A.C. Cebrián and J.  Asín
     abstract: '  Abstract The need of analysing the dependence between two or more
       point processes in time appears            in many modelling problems related
       to the occurrence of events, such as the occurrence of climate            events
